[gd_scene load_steps=4 format=2]

[ext_resource path="res://interface/GameButton.gd" type="Script" id=1]
[ext_resource path="res://fonts/default_font_18.tres" type="DynamicFont" id=2]

[sub_resource type="RectangleShape2D" id=1]

extents = Vector2( 80, 20 )

[node name="GameButton" type="Node2D"]
script = ExtResource( 1 )

[node name="ButtonArea" type="Area2D" parent="."]

[node name="Shape" type="CollisionShape2D" parent="ButtonArea"]
shape = SubResource( 1 )

[node name="ButtonText" type="Label" parent="."]
margin_left = -80.0
margin_top = -20.0
margin_right = 80.0
margin_bottom = 20.0
custom_fonts/font = ExtResource( 2 )
text = "Button"
align = 1
valign = 1

[connection signal="mouse_entered" from="ButtonArea" to="." method="_on_ButtonArea_mouse_entered"]
[connection signal="mouse_exited" from="ButtonArea" to="." method="_on_ButtonArea_mouse_exited"]
